[gd_scene load_steps=9 format=2]

[ext_resource path="res://common/background.png" type="Texture" id=1]
[ext_resource path="res://ui/play-icon.png" type="Texture" id=2]
[ext_resource path="res://ui/button.gd" type="Script" id=3]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/main menu/main_menu.gd" type="Script" id=5]
[ext_resource path="res://ui/info-icon.png" type="Texture" id=7]
[ext_resource path="res://scenes/main menu/logo.png" type="Texture" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.02
glow_blend_mode = 0

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -96, -60 )
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.5 )
motion_mirroring = Vector2( 0, 128 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
position = Vector2( 0, 36 )
motion_scale = Vector2( 1, 0.25 )
motion_mirroring = Vector2( 128, 128 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
margin_left = -64.0
margin_top = 37.0
margin_right = 64.0
margin_bottom = 165.0
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 64, 64 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 9.0
margin_right = 20.0
margin_bottom = 25.0
alignment = 1

[node name="PlayButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.960784, 0.945098, 0.862745, 1 )
margin_left = 6.0
margin_right = 22.0
margin_bottom = 16.0
icon = ExtResource( 2 )
flat = true
icon_align = 1
script = ExtResource( 3 )

[node name="InfoButton" type="Button" parent="HBoxContainer"]
modulate = Color( 0.960784, 0.945098, 0.862745, 1 )
margin_left = 26.0
margin_right = 34.0
margin_bottom = 16.0
icon = ExtResource( 7 )
flat = true
icon_align = 1
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HBoxContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
